--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "i18next-http-backend": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.1.2"
+    "react-i18next": "^15.1.2",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
